--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "geoip-lite": "^1.4.10",
     "request-ip": "^3.3.0",
+    "ua-parser-js": "^2.0.0",
     "useragent": "^2.3.0"
   }
 }
